Require PQ keys when changing numbers or distributing key material